[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/LoadMenu.gd" type="Script" id=2]
[ext_resource path="res://scripts/LanguageMenu.gd" type="Script" id=3]
[ext_resource path="res://scripts/TextInputWindow.gd" type="Script" id=4]
[ext_resource path="res://scripts/SentenceList.gd" type="Script" id=5]
[ext_resource path="res://theme/theme.tres" type="Theme" id=6]
[ext_resource path="res://theme/labelboxstyle.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/titlelabelfont.tres" type="DynamicFont" id=8]
[ext_resource path="res://icons/resize.svg" type="Texture" id=9]
[ext_resource path="res://icons/gear.svg" type="Texture" id=10]
[ext_resource path="res://scripts/SettingsWindow.gd" type="Script" id=11]
[ext_resource path="res://scripts/Popups.gd" type="Script" id=12]

[sub_resource type="Theme" id=1]
PanelContainer/colors/ = Color( 0, 0, 0, 1 )
PanelContainer/styles/PanelContainer = null

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Background" type="CanvasLayer" parent="."]
layer = 0

[node name="SolidBackground" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0235294, 0, 0.290196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Topbar" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_left = 952.0
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 10

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer/Topbar"]
margin_right = 34.0
margin_bottom = 34.0

[node name="FullscreenButton" type="TextureButton" parent="GUI/VBoxContainer/Topbar/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 29.0
margin_bottom = 29.0
texture_normal = ExtResource( 9 )

[node name="PanelContainer2" type="PanelContainer" parent="GUI/VBoxContainer/Topbar"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 34.0

[node name="SettingsButton" type="TextureButton" parent="GUI/VBoxContainer/Topbar/PanelContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 29.0
margin_bottom = 29.0
texture_normal = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="GUI/VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer"]
margin_left = 302.0
margin_top = 159.0
margin_right = 722.0
margin_bottom = 403.0

[node name="CreateButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/MainMenu"]
margin_right = 420.0
margin_bottom = 120.0
rect_min_size = Vector2( 420, 120 )
text = "Create a text"

[node name="LoadButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/MainMenu"]
margin_top = 124.0
margin_right = 420.0
margin_bottom = 244.0
rect_min_size = Vector2( 420, 120 )
text = "Load a text"

[node name="LoadMenu" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer"]
visible = false
margin_left = 152.0
margin_top = 11.0
margin_right = 872.0
margin_bottom = 551.0
rect_min_size = Vector2( 720, 0 )
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/VBoxContainer/CenterContainer/LoadMenu"]
margin_right = 720.0
margin_bottom = 500.0
grow_vertical = 2
rect_min_size = Vector2( 0, 500 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="TextList" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/LoadMenu/ScrollContainer"]
margin_right = 720.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer/CenterContainer/LoadMenu"]
margin_top = 504.0
margin_right = 720.0
margin_bottom = 540.0

[node name="CancelButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/LoadMenu/MarginContainer"]
margin_left = 325.0
margin_right = 395.0
margin_bottom = 36.0
size_flags_horizontal = 4
text = "Cancel"

[node name="LanguageMenu" type="HBoxContainer" parent="GUI/VBoxContainer/CenterContainer"]
visible = false
margin_left = 477.0
margin_top = 234.0
margin_right = 547.0
margin_bottom = 328.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu"]
margin_right = 201.0
margin_bottom = 117.0

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer"]
margin_right = 201.0
margin_bottom = 33.0

[node name="Label" type="Label" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 196.0
margin_bottom = 28.0
text = "Choose original language"
align = 1

[node name="LanguageGrid" type="GridContainer" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer"]
margin_top = 37.0
margin_right = 201.0
margin_bottom = 37.0
columns = 5

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer"]
visible = false
margin_top = 37.0
margin_right = 201.0
margin_bottom = 397.0
rect_min_size = Vector2( 0, 360 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="LanguageList" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer/ScrollContainer"]
margin_right = 201.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer"]
margin_top = 41.0
margin_right = 201.0
margin_bottom = 117.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="CancelButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer/MarginContainer2"]
margin_left = 65.0
margin_top = 20.0
margin_right = 135.0
margin_bottom = 56.0
size_flags_horizontal = 4
text = "Cancel"

[node name="TextInputWindow" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer"]
visible = false
margin_left = 152.0
margin_top = 61.0
margin_right = 872.0
margin_bottom = 500.0
script = ExtResource( 4 )

[node name="TextTitle" type="PanelContainer" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow"]
margin_right = 720.0
margin_bottom = 75.0
rect_min_size = Vector2( 720, 75 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/TextTitle"]
margin_left = 5.0
margin_top = 5.0
margin_right = 715.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/TextTitle/VBoxContainer"]
margin_right = 710.0
margin_bottom = 23.0
theme = SubResource( 1 )
custom_styles/normal = ExtResource( 7 )
text = "Write here the title of your text"

[node name="TitleEdit" type="TextEdit" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/TextTitle/VBoxContainer"]
margin_top = 27.0
margin_right = 710.0
margin_bottom = 65.0
size_flags_vertical = 3
text = "Die verlorene Revolution"
wrap_enabled = true
caret_blink = true

[node name="TextContent2" type="PanelContainer" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow"]
margin_top = 79.0
margin_right = 720.0
margin_bottom = 399.0
rect_min_size = Vector2( 720, 320 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/TextContent2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 715.0
margin_bottom = 315.0

[node name="Label" type="Label" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/TextContent2/VBoxContainer"]
margin_right = 710.0
margin_bottom = 23.0
custom_styles/normal = ExtResource( 7 )
text = "Write here your text"

[node name="TextEdit" type="TextEdit" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/TextContent2/VBoxContainer"]
margin_top = 27.0
margin_right = 710.0
margin_bottom = 310.0
size_flags_vertical = 3
text = "Die Herbstrevolution von 1989 wurde nie vollendet! Im Grunde war es danach vorbei."
wrap_enabled = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow"]
margin_top = 403.0
margin_right = 720.0
margin_bottom = 439.0
size_flags_horizontal = 5

[node name="Container" type="Container" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer"]
margin_right = 237.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer"]
margin_left = 241.0
margin_right = 450.0
margin_bottom = 36.0
size_flags_horizontal = 2

[node name="CreateButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer/Buttons"]
margin_right = 70.0
margin_bottom = 36.0
text = "Create"

[node name="ResetButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer/Buttons"]
margin_left = 74.0
margin_right = 135.0
margin_bottom = 36.0
text = "Reset"

[node name="CancelButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer/Buttons"]
margin_left = 139.0
margin_right = 209.0
margin_bottom = 36.0
text = "Cancel"

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer"]
margin_left = 643.0
margin_right = 720.0
margin_bottom = 36.0
size_flags_horizontal = 10

[node name="WordCounter" type="Label" parent="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 6.0
margin_right = 72.0
margin_bottom = 29.0
hint_tooltip = "MyMemory only allows 1000 translated words a day."
text = "Words: 0"

[node name="ProgressWindow" type="PanelContainer" parent="GUI/VBoxContainer/CenterContainer"]
visible = false
margin_left = 362.0
margin_top = 221.0
margin_right = 662.0
margin_bottom = 341.0
rect_min_size = Vector2( 300, 120 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/ProgressWindow"]
margin_left = 7.0
margin_top = 41.0
margin_right = 293.0
margin_bottom = 79.0
size_flags_vertical = 4

[node name="Label" type="Label" parent="GUI/VBoxContainer/CenterContainer/ProgressWindow/VBoxContainer"]
margin_left = 102.0
margin_right = 183.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Translating..."

[node name="ProgressBar" type="ProgressBar" parent="GUI/VBoxContainer/CenterContainer/ProgressWindow/VBoxContainer"]
margin_left = 23.0
margin_top = 18.0
margin_right = 263.0
margin_bottom = 38.0
rect_min_size = Vector2( 240, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="SentenceList" type="ScrollContainer" parent="GUI/VBoxContainer/CenterContainer"]
visible = false
margin_left = 152.0
margin_top = 31.0
margin_right = 872.0
margin_bottom = 531.0
rect_min_size = Vector2( 720, 500 )
size_flags_horizontal = 3
size_flags_vertical = 0
scroll_horizontal_enabled = false
script = ExtResource( 5 )

[node name="VBox" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/SentenceList"]
margin_right = 720.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer/CenterContainer/SentenceList/VBox"]
margin_right = 720.0
margin_bottom = 36.0

[node name="Dummy" type="Container" parent="GUI/VBoxContainer/CenterContainer/SentenceList/VBox/HBoxContainer"]
margin_right = 80.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 0 )

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer/CenterContainer/SentenceList/VBox/HBoxContainer"]
margin_left = 84.0
margin_right = 636.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="TextTitle" type="Label" parent="GUI/VBoxContainer/CenterContainer/SentenceList/VBox/HBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 547.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 8 )
text = "The title of this text"

[node name="Dummy2" type="Container" parent="GUI/VBoxContainer/CenterContainer/SentenceList/VBox/HBoxContainer"]
margin_left = 640.0
margin_right = 720.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 0 )

[node name="ListContainer" type="VBoxContainer" parent="GUI/VBoxContainer/CenterContainer/SentenceList/VBox"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 40.0

[node name="CancelButton" type="Button" parent="GUI/VBoxContainer/CenterContainer/SentenceList/VBox"]
margin_left = 325.0
margin_top = 44.0
margin_right = 395.0
margin_bottom = 80.0
size_flags_horizontal = 4
text = "Cancel"

[node name="Popups" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 12 )

[node name="PopupsBG" type="ColorRect" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsWindow" type="CenterContainer" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsWindow" type="VBoxContainer" parent="Popups/SettingsWindow"]
margin_left = 412.0
margin_top = 150.0
margin_right = 612.0
margin_bottom = 450.0
rect_min_size = Vector2( 200, 300 )
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Popups/SettingsWindow/SettingsWindow"]
margin_right = 200.0
margin_bottom = 260.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/SettingsWindow/SettingsWindow/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 255.0

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer"]
margin_right = 190.0
margin_bottom = 33.0

[node name="LanguageLabel" type="Label" parent="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 114.0
margin_bottom = 28.0
text = "Translation to: "

[node name="LineEdit" type="LineEdit" parent="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 190.0
margin_bottom = 33.0
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 190.0
margin_bottom = 73.0

[node name="Fullscreen" type="Label" parent="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_top = 6.0
margin_right = 159.0
margin_bottom = 29.0
text = "Fullscreen by default"

[node name="CheckButton" type="CheckBox" parent="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 164.0
margin_right = 190.0
margin_bottom = 36.0
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/SettingsWindow/SettingsWindow"]
margin_left = 38.0
margin_top = 264.0
margin_right = 161.0
margin_bottom = 300.0
size_flags_horizontal = 4

[node name="ResetButton" type="Button" parent="Popups/SettingsWindow/SettingsWindow/HBoxContainer"]
margin_right = 61.0
margin_bottom = 36.0
text = "Reset"

[node name="CloseButton" type="Button" parent="Popups/SettingsWindow/SettingsWindow/HBoxContainer"]
margin_left = 65.0
margin_right = 123.0
margin_bottom = 36.0
text = "Close"
[connection signal="pressed" from="GUI/VBoxContainer/Topbar/PanelContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/Topbar/PanelContainer2/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/MainMenu/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/MainMenu/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/LoadMenu/MarginContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/LanguageMenu/VBoxContainer/MarginContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer/Buttons/CreateButton" to="." method="_create"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer/Buttons/ResetButton" to="GUI/VBoxContainer/CenterContainer/TextInputWindow" method="reset"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/TextInputWindow/HBoxContainer/Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/CenterContainer/SentenceList/VBox/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="text_changed" from="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="Popups/SettingsWindow" method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="Popups/SettingsWindow/SettingsWindow/PanelContainer/VBoxContainer/HBoxContainer2/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Popups/SettingsWindow/SettingsWindow/HBoxContainer/ResetButton" to="Popups/SettingsWindow" method="_on_Reset_pressed"]
[connection signal="pressed" from="Popups/SettingsWindow/SettingsWindow/HBoxContainer/CloseButton" to="Popups/SettingsWindow" method="_on_CloseButton_pressed"]
